--- a/register.html
+++ b/register.html
@@ -86,7 +86,7 @@
             if (username && email) {
                 localStorage.setItem("quizUser", JSON.stringify({ username, email }));
                 alert("Registration Successful! Redirecting to the quiz...");
-                window.location.href = "index.html";
+                window.location.href = "file:///C:/Users/Redzo/Documents/Universal%20Code/Universal%20Quiz%20Game.html/index.html";
             }
         });
     </script>
